[gd_scene load_steps=4 format=3 uid="uid://bp625i2ak2skc"]

[ext_resource type="Script" path="res://scenes/gui/level_up/level_up_option.gd" id="1_17uwu"]
[ext_resource type="FontFile" uid="uid://b6403quevyxty" path="res://res/font/ttf/lowres/ChevyRay - Little League Mono.ttf" id="1_jldud"]

[sub_resource type="Theme" id="Theme_6a04n"]
default_font = ExtResource("1_jldud")
default_font_size = 0

[node name="LevelUpOption" type="ColorRect"]
custom_minimum_size = Vector2(100, 30)
offset_right = 60.0
offset_bottom = 30.0
color = Color(0.501961, 0.501961, 0.501961, 1)
script = ExtResource("1_17uwu")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 1.0
offset_right = 86.0
offset_bottom = 10.0
theme = SubResource("Theme_6a04n")
theme_override_font_sizes/font_size = 4
text = "Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 78.0
offset_bottom = 36.0
theme = SubResource("Theme_6a04n")
theme_override_font_sizes/font_size = 4
text = "description of a good time"
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
